Add ability to time many avalanches

--- a/multigrid_analysis.ipynb
+++ b/multigrid_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 373,
    "id": "f871ab21",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 383,
    "id": "86e0e1c4",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 385,
    "id": "38029d7c",
    "metadata": {},
    "outputs": [],
@@ -73,10 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step = 20\n",
+    "step = 25\n",
     "field = \"mag\"\n",
     "plt.title(\"E field \" + names[field] + \", timestep \" + str(step))\n",
-    "plt.xlabel(\"x [cm]\")\n",
+    "plt.xlabel(\"Scan axis [cm]\")\n",
     "plt.ylabel(\"Electric field [V/m]\")\n",
     "plt.scatter(df_1[df_1[\"step\"] == step][\"x\"],df_1[df_1[\"step\"] == step][field],label = str(possible_steps[0]) + \" grid steps\",s=1)\n",
     "plt.scatter(df_2[df_2[\"step\"] == step][\"x\"],df_2[df_2[\"step\"] == step][field],label = str(possible_steps[1])+ \" grid steps\",s=1)\n",
@@ -84,8 +84,9 @@
     "#plt.scatter(df_4[df_4[\"step\"] == step][\"x\"],df_4[df_4[\"step\"] == step][field],label = str(possible_steps[3])+ \" grid steps\",s=1)\n",
     "#plt.vlines(0,1.6,2.4)\n",
     "#plt.vlines(r_gridpoints[1][:7],1.225,1.4,colors=[\"r\"])\n",
-    "\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.savefig(\"figures/field_comparison25.png\")\n",
+    "\n"
    ]
   }
  ],
