Update gain spectrum files/results

--- a/axisscan/analysis.ipynb
+++ b/axisscan/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "49a4da1f",
    "metadata": {},
    "outputs": [],
@@ -15,20 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "12109b14",
+   "execution_count": 2,
+   "id": "afa9c81a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12637\n"
+     ]
+    }
+   ],
    "source": [
     "efile = open(\"efile.txt\")\n",
     "pfile = open(\"pfile.txt\")\n",
     "\n",
     "el = [i[:-1].split(\",\") for i in efile.readlines()]\n",
     "pl = [i[:-1].split(\",\") for i in pfile.readlines()]\n",
+    "counter = 0\n",
+    "for i in pl:\n",
+    "    if int(i[0]) == 39 and i[1] == 'i':\n",
+    "        counter += 1\n",
+    "print(counter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "12109b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "# efile << iF << \",\" << y << \",\" << ex << \",\" << ey << \",\" << ez << \",\" << std::sqrt(ex*ex+ey*ey+ez*ez) << \"\\n\";\n",
     "n_frames = 40\n",
-    "part = 5\n",
+    "part = 3\n",
     "parts = [\"Frame\",\"y\",\"E field x\", \"E field y\", \"E field z\",\"E field magnitude\"]\n",
     "\n",
     "\n",
